# tld-mod-manager

./: .gitignore  Cargo.toml  README.md
.github/: README.md
.github/workflows/: stale.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/windows/src/: tld-mod-manager.slnx
apps/windows/src/tld-mod-manager/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  tld-mod-manager.csproj
apps/windows/src/tld-mod-manager.core/: Class1.cs  tld-mod-manager.core.csproj
apps/windows/src/tld-mod-manager.package/: Package.appxmanifest  tld-mod-manager.package.wapproj
apps/windows/src/tld-mod-manager.tests/: Package.appxmanifest  UnitTestApp.xaml  UnitTestApp.xaml.cs  UnitTestAppWindow.xaml  UnitTestAppWindow.xaml.cs  UnitTests.cs  app.manifest  tld-mod-manager.tests.csproj
apps/windows/src/tld-mod-manager.tests/Properties/: launchSettings.json
core/: Cargo.toml
core/src/: game_launchers.rs  lib.rs  main.rs  melonloader.rs
