[package]
name = "tld-mod-manager-core"
version = "0.1.0"
edition = "2024"
authors = ["Deadman"]

[dependencies]
keyvalues-parser = "0.2.2"
keyvalues-serde = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
win32-version-info = "0.3.0"
