[package]
name = "tld-mod-manager-core"
version = "0.1.0"
edition = "2024"
authors = ["Deadman"]

[dependencies]
glob = "0.3.3"
keyvalues-parser = "0.2.2"
keyvalues-serde = "0.2.3"
reqwest = "0.12.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
win32-version-info = "0.3.0"
